<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/menu"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginBottom="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnViewPet"
            android:text="@string/view_pet"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/buttonTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnEditPet"
            android:text="@string/edit_pet_data"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/buttonTextColor"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnEditVetVisit"
            android:text="@string/edit_vet_visit"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/buttonTextColor"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnEditVaccination"
            android:text="@string/edit_vaccination"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/buttonTextColor"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnEditPetShopVisit"
            android:text="@string/edit_petshop_visit"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/buttonTextColor"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
