<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTv"
            android:text="@string/pet_data"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/primaryDarkColor"
            android:layout_marginBottom="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/nameEt"
            android:hint="@string/hint_name"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColor"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/birthDateEt"
            android:hint="@string/hint_birth_date"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorSecondary"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColor"
            android:focusable="false"
            android:clickable="true"/>

        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/animal_types"
            android:spinnerMode="dropdown" />


        <Spinner
            android:id="@+id/sizeSpinner"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/animal_sizes"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/colorEt"
            android:hint="@string/hint_color"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorSecondary"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColor"
            android:inputType="text"/>

        <EditText
            android:id="@+id/lastVetVisitEt"
            android:hint="@string/hint_last_vet_visit"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorSecondary"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColor"
            android:focusable="false"
            android:clickable="true"/>

        <EditText
            android:id="@+id/lastVaccinationEt"
            android:hint="@string/hint_last_vaccination"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorSecondary"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColor"
            android:focusable="false"
            android:clickable="true"/>

        <EditText
            android:id="@+id/lastPetShopVisitEt"
            android:hint="@string/hint_last_petshop_visit"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorSecondary"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColor"
            android:focusable="false"
            android:clickable="true"/>

        <EditText
            android:id="@+id/veterianPhoneEt"
            android:hint="@string/hint_veterian_phone"
            android:inputType="phone"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorSecondary"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColor" />

        <EditText
            android:id="@+id/veterianSiteEt"
            android:hint="@string/hint_veterian_site"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorSecondary"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColor"
            android:inputType="textUri"/>

        <Button
            android:id="@+id/saveBt"
            android:text="@string/save"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/buttonTextColor"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
