<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/edit_vet_visit"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primaryDarkColor"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"/>

    <EditText
        android:id="@+id/etLastVetVisit"
        android:hint="@string/hint_last_vet_visit"
        android:textColor="@color/textColorPrimary"
        android:backgroundTint="@color/primaryColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/buttonTextColor"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
